--- a/ai-guide/package.json
+++ b/ai-guide/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-joyride": "^2.9.3",
     "react-router": "^7.8.1"
   },
   "devDependencies": {
